--- a/index.html
+++ b/index.html
@@ -469,6 +469,94 @@
                             <td>Ưa mạo hiểm, tăng trưởng đột phá</td>
                         </tr>
                     </table>
+                    <div class="table-mobile">
+                    	<div class="tr">
+                            <div class="th">Đầu tư lợi nhuận cố địng</div>
+                    	</div>
+                    	<div class="tr">
+                            <div>Thời gian nắm giữ <br>hiệu quả</div>
+                            <div>Lợi nhuận <br>(*: Lợi nhậu kỳ vọng)</div>
+                    	</div>
+                    	<div class="tr">
+                            <div>LÃI SUẤT CỐ ĐỊNH</div>
+                    	</div>
+                        <div class="tr">
+                            <div>Linh hoạt</div>
+                            <div>2 - 10.50%/năm</div>
+                        </div>
+                        <div class="tr">
+                            <div>VNTOP 10</div>
+                        </div>
+                        <div class="tr">
+                            <div>3 tháng</div>
+                            <div>25%/năm</div>
+                        </div>
+                        <div class="tr">
+                            <div>VNTOP 20</div>
+                        </div>
+                        <div class="tr">
+                            <div>1 tháng</div>
+                            <div>30%/năm</div>
+                        </div>
+                        <div class="tr">
+                            <div>VNTOP ALL</div>
+                        </div>
+                        <div class="tr">
+                            <div>2 tuần</div>
+                            <div>35%/năm</div>
+                        </div>
+                        <div class="tr">
+                            <div>ĐẦU TƯ BỨT PHÁ</div>
+                        </div>
+                        <div class="tr">
+                            <div>Tùy chọn</div>
+                            <div>20%/quý</div>
+                        </div>
+                    </div>
+                    <div class="table-mobile">
+                    	<div class="tr">
+                            <div class="th">Đầu tư tăng trưởng</div>
+                    	</div>
+                        <div class="tr">
+                            <div>Thanh toán <br>lợi nhuận</div>
+                            <div>Mục tiêu <br>đầu tư</div>
+                        </div>
+                        <div class="tr">
+                            <div>LÃI SUẤT CỐ ĐỊNH</div>
+                        </div>
+                        <div class="tr">
+                            <div>Cuối kỳ hoặc 3 tháng/lần</div>
+                            <div>An toàn, <br>lợi suất tốt</div>
+                        </div>
+                        <div class="tr">
+                            <div>VNTOP 10</div>
+                        </div>
+                        <div class="tr">
+                            <div>Linh hoạt</div>
+                            <div>Tích lũy, tăng trưởng bền vững</div>
+                        </div>
+                        <div class="tr">
+                            <div>VNTOP 20</div>
+                        </div>
+                        <div class="tr">
+                            <div>Linh hoạt</div>
+                            <div>Thích nghi rủi ro, tăng trưởng cao</div>
+                        </div>
+                        <div class="tr">
+                            <div>VNTOP ALL</div>
+                        </div>
+                        <div class="tr">
+                            <div>Linh hoạt</div>
+                            <div>Rủi ro cao, tăng trưởng tốt</div>
+                        </div>
+                        <div class="tr">
+                            <div>ĐẦU TƯ BỨT PHÁ</div>
+                        </div>
+                        <div class="tr">
+                            <div>Linh hoạt</div>
+                            <div>Ưa mạo hiểm, tăng trưởng đột phá</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -614,6 +702,9 @@
         </section>
         <section id="mobile-app">
             <div class="container">
+            	<div class="mobile-app-img__mobile">
+	                <img data-aos="flip-left" src="imgs/app-mobile.png" alt="">
+	            </div>
                 <div class="mobile-app-box">
                     <p class="mobile-app-box__p1">Mobile App</p>
                     <h3 class="mobile-app-box__title">COMING SOON</h3>
