--- a/index.html
+++ b/index.html
@@ -218,7 +218,8 @@
     </header>
     <main>
         <section class="hero-sc">
-            <img src="imgs/banner.png" alt="">
+            <img class="banner-pc" src="imgs/banner.png" alt="">
+            <img class="banner-mobile" src="imgs/banner-mobile.png" alt="">
             <!-- <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
