--- a/nguyen-tac-dau-tu.html
+++ b/nguyen-tac-dau-tu.html
@@ -229,7 +229,7 @@
                 </div>
                 <div class="investment-principles__box1">
                     <div class="investment-principles__box1-icon">
-                        <img src="imgs/nguyen-tac/icon-vuong.png" height="161" width="159" alt="">
+                        <img src="imgs/nguyen-tac/icon-vuong.png" alt="">
                     </div>
                     <div class="investment-principles__box1-img">
                         <img src="imgs/nguyen-tac/nguyen-tac-1.png" alt="">
