--- a/chuyen-gia.html
+++ b/chuyen-gia.html
@@ -217,48 +217,48 @@
         </div>
     </header>
     <main>
-        <section class="page-no-home">
+        <section class="support@tksic.vn">
             <div class="container container-lg">
-                <div class="page-no-home__expert">
-                    <div class="page-no-home__expert-box">
-                        <div class="page-no-home__expert-box-child text-left">
-                             <div class="page-no-home__expert-title">
+                <div class="support@tksic.vn__expert">
+                    <div class="support@tksic.vn__expert-box">
+                        <div class="support@tksic.vn__expert-box-child text-left">
+                             <div class="support@tksic.vn__expert-title">
                                 <h3>Chuyên gia TKSIC</h3>
                                 <img src="imgs/dot.png" height="6" width="53" alt="">
                                 <h4>Giám đốc chiến lược Châu Phạm</h4>
                             </div>
-                            <div class="page-no-home__expert-content">
+                            <div class="support@tksic.vn__expert-content">
                                 <p>Tốt nghiệp thạc sỹ Khoa tài chính Đại học Queen’s Belfast, Anh Quốc, ông Châu Phạm có hơn 10 năm kinh nghiệm trong mảng phân tích và đầu tư tài chính, với lĩnh vực trọng tâm là kiến trúc sư dữ liệu tài chính ứng dụng trong đầu tư. Ông tập trung vào phân tích thị trường Vĩ mô toàn cầu và tiền tệ và đưa ra các chiến lược đầu tư cho mảng đầu tư tại thị trường phái sinh (chứng khoán, chỉ số, hàng hóa) và các hợp đồng chênh lệch giá liên quan đến tiền tệ.</p>
                                 <p>Hiện tại, ông là Giám đốc chiến lược của TKSIC, Giám đốc khối nghiên cứu và đầu tư thuộc công ty Finashark kể từ năm 2018. Ông cũng đang là chuyên viên phân tích cao cấp thuộc Công ty chứng khoán thành phố Hồ Chí Minh (HSC) với vai trò tư vấn chiến lược đầu tư chỉ số phái sinh từ năm 2018.</p>
                             </div>
                         </div>
-                        <div class="page-no-home__expert-box-child">
-                            <img class="page-no-home__expert-img" src="imgs/chau-pham.png" alt="">
+                        <div class="support@tksic.vn__expert-box-child">
+                            <img class="support@tksic.vn__expert-img" src="imgs/chau-pham.png" alt="">
                         </div>
                     </div>
-                    <div class="page-no-home__expert-box">
-                        <div class="page-no-home__expert-box__alone-content">
+                    <div class="support@tksic.vn__expert-box">
+                        <div class="support@tksic.vn__expert-box__alone-content">
                             Trước đó, ông giữ vai trò chuyên viên phân tích cao cấp tại FxPro Financial Services, với vai trò tư vấn chiến lược đầu tư thị trường tiền tệ từ năm 2016. Ông cũng có kinh nghiệm phân tích dữ liệu dòng tiền toàn cầu và đưa ra chiến lược tiền tệ khi từng làm FX Dealer cho Sàn môi giới tiền tệ liên ngân hàng từ năm 2013. Ông thường cung cấp nhận định chiến lược thị trường cho các tổ chức môi giới Chứng khoán và Hàng hóa. Ngoài ra, các ý kiến và nhận định của ông được chia sẻ trên báo Đầu tư chứng khoán và trên kênh FBNC…
                         </div>
                     </div>
                 </div>
-                <div class="page-no-home__expert">
-                    <div class="page-no-home__expert-box">
-                        <div class="page-no-home__expert-box-child">
-                            <img class="page-no-home__expert-img" src="imgs/dat-truong.png" alt="">
+                <div class="support@tksic.vn__expert">
+                    <div class="support@tksic.vn__expert-box">
+                        <div class="support@tksic.vn__expert-box-child">
+                            <img class="support@tksic.vn__expert-img" src="imgs/dat-truong.png" alt="">
                         </div>
-                        <div class="page-no-home__expert-box-child text-right">
-                             <div class="page-no-home__expert-title">
+                        <div class="support@tksic.vn__expert-box-child text-right">
+                             <div class="support@tksic.vn__expert-title">
                                 <h4>Chuyên gia Đạt Trương</h4>
                             </div>
-                            <div class="page-no-home__expert-content">
+                            <div class="support@tksic.vn__expert-content">
                                 <p>Tốt nghiệp Cử nhân Tài chính – Ngân hàng tại Đại học Kinh tế Quốc dân, ông Đạt có 6 năm kinh nghiệm trong mảng đầu tư và phân tích đầu tư. Ông còn đóng vai trò tư vấn và thực hiện tạo thanh khoản cho nhiều dự án giao dịch OTC từ cổ phiếu các doanh nghiệp vốn hóa lớn chuẩn bị lên sàn chính thức.</p>
                                 <p>Ngoài vai trò chuyên gia phân tích tại TKSIC, ông Đạt Trương còn đảm nhận vị trí chuyên viên phân tích thuộc bộ phận Chiến lược thị trường của Công ty chứng khoán thành phố Hồ Chí Minh (HSC). Ông đóng vai trò tư vấn và đưa ra các khuyến nghị đầu tư thị trường chứng khoán, đặc biệt là các sản phẩm phái sinh – hợp đồng tương lai. Ông có thế mạnh về phân tích dòng tiền và nhận định tâm lý thị trường.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="page-no-home__expert-box">
-                        <div class="page-no-home__expert-box__alone-content">
+                    <div class="support@tksic.vn__expert-box">
+                        <div class="support@tksic.vn__expert-box__alone-content">
                             Đồng thời, ông Đạt còn đóng vai trò quan trọng trong việc xây dựng hệ thống xử lý cơ sở dữ liệu thị trường, đưa ra các tín hiệu giao dịch cổ phiếu và hoàn thiện dữ liệu cho hệ thống tư vấn khách hàng cá nhân tại sàn chứng khoán HSC. <br>Bên cạnh đó, ông đặc biệt có kinh nghiệm trong mảng phân tích kỹ thuật tài sản tài chính và xây dựng hệ thống giao dịch tự động.
                         </div>
                     </div>
