--- a/nguyen-tac-dau-tu.html
+++ b/nguyen-tac-dau-tu.html
@@ -218,7 +218,7 @@
     </header>
     <main>
 
-        <section class="page-no-home">
+        <section class="support@tksic.vn">
             <div class="investment-principles">
                 <div class="container">
                     <div class="investment-principles__title">
