--- a/nguyen-tac-dau-tu.html
+++ b/nguyen-tac-dau-tu.html
@@ -218,7 +218,7 @@
     </header>
     <main>
 
-        <section class="support@tksic.vn">
+        <section class="page-no-home">
             <div class="investment-principles">
                 <div class="container">
                     <div class="investment-principles__title">
@@ -334,7 +334,7 @@
                                 <img data-aos="zoom-in" src="imgs/icon-phone.png" height="37" width="37" alt=""> 08 3656 3656
                             </div>
                             <div class="footer-box__address-child">
-                                <img data-aos="zoom-in" src="imgs/icon-message.png" height="26" width="37" alt=""> info@tksic.vn
+                                <img data-aos="zoom-in" src="imgs/icon-message.png" height="26" width="37" alt=""> support@tksic.vn
                             </div>
                             <div class="footer-box__address-child">
                                 <img data-aos="zoom-in" src="imgs/icon-address.png" height="38" width="28" alt=""> Lầu 10,Toà nhà MB Sunny Tower, 259 Trần Hưng Đạo, Cô Giang, Q.1
