--- a/bao-chi-noi-ve-tksic.html
+++ b/bao-chi-noi-ve-tksic.html
@@ -148,7 +148,7 @@
                                     <div class="submenu-box-child">
                                         <img class="submenu-box-child__img" src="imgs/menu-hotro.png" height="50" width="50" alt="">
                                         <div class="submenu-box-child__list">
-                                            <h4>Tin tức</h4>
+                                            <h4>Hỗ trợ</h4>
                                             <ul class="submenu-box-child__list-item one-col">
                                         		<li><a href="#">Hướng dẫn giao dịch</a></li>
                                         		<li><a href="#">Câu hỏi thường gặp</a></li>
