--- a/lai-suat-co-dinh.html
+++ b/lai-suat-co-dinh.html
@@ -148,7 +148,7 @@
                                     <div class="submenu-box-child">
                                         <img class="submenu-box-child__img" src="imgs/menu-hotro.png" height="50" width="50" alt="">
                                         <div class="submenu-box-child__list">
-                                            <h4>Tin tức</h4>
+                                            <h4>Hỗ trợ</h4>
                                             <ul class="submenu-box-child__list-item one-col">
                                         		<li><a href="#">Hướng dẫn giao dịch</a></li>
                                         		<li><a href="#">Câu hỏi thường gặp</a></li>
@@ -243,7 +243,11 @@
                                 <div class="page-vntop__register-box-text">
                                     <div class="page-vntop__register-title">
                                         <h3>Lãi suất cố định</h3>
-                                        <img src="imgs/dot.png" height="6" width="53" alt="">
+                                        <div class="dots_three">
+                                            <span></span>
+                                            <span></span>
+                                            <span></span>
+                                        </div>
                                         <p>"Lãi suất cố định" là sản phẩm duy nhất được TKSIC cam kết lợi nhuận với lợi suất vượt trội so tvới lãi suất tiền gửi ngân hàng. Trên cơ sở đầu tư vào các công cụ có thu nhập cố định, TKSIC hướng đến việc tối ưu lợi nhuận cho nhà đầu tư dựa trên năng lực thu hút nguồn vốn lớn của mình.</p>
                                     </div>
                                     <div class="page-vntop__register-list">
@@ -322,6 +326,9 @@
                                 </div>
                                 <p>TKSIC chọn lọc đầu tư vào các công cụ tài chính được phát hành và bảo chứng bởi định chế tài chính uy tín.</p>
                             </div>
+                        </div>
+                        <div class="page-vntop__fixed-interest__icon">
+                            <img src="imgs/vntop/m.png" alt="">
                         </div>
                     </div>
                 </div>
