--- a/vn-top-20.html
+++ b/vn-top-20.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TKSIC - Danh mục đầu tư</title>
+    <title>TKSIC - VN TOP 20</title>
     <meta content="" name="keywords">
     <meta content="" name="description">
     <meta property="og:site_name" content="" />
@@ -217,23 +217,141 @@
         </div>
     </header>
     <main>
-        <section class="page-no-home">
-            <div class="investment-portfolio">
-                <div class="container">
-                    <div class="investment-portfolio-box">
-                        <div class="investment-portfolio-box-child">
+        <section class="page-banner vntop__20">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <img class="page-banner-img" src="imgs/vntop/vn-top-20-banner.png" alt="">
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="page-banner-box">
                             <div class="page-banner-title">
-                                <h3>Tư vấn danh mục đầu tư</h3>
-                                <img src="imgs/dot.png" height="6" width="53" alt="">
-                                <ul>
-                                    <li>TKSIC cung cấp miễn phí các báo cáo tài chính và tư vấn về tình hình hoạt động của các công ty niêm yết, phân tích chuyên sâu các cổ phiếu đang niêm yết, các cổ phiếu OTC, dự báo xu hướng biến động giá cổ phiếu theo yêu cầu của nhà đầu tư giúp, nhà đầu tư lựa chọn danh mục đầu tư hiệu quả.</li>
-                                    <li>Chúng tôi hiểu rằng, mọi nhà đầu tư đều có các kế hoạch tài chính của mình. Vì thế, mục tiêu cao nhất của chúng tôi là đồng hành cùng các Khách hàng của TKSIC và cung cấp các giải pháp tài chính tốt nhất, với đội ngũ chuyên viên tư vấn chúng tôi cam kết dùng toàn bộ kiến thức, kỹ năng, sự liêm chính và cẩn trọng để hướng dẫn, tư vấn, giúp Khách hàng đưa ra quyết định đầu tư tốt hơn, giúp Khách hàng gia tăng tài sản và đạt được các mục tiêu.</li>
-                                </ul>
+                                <h3>VNTop 20</h3>
+                                <img src="imgs/bao-chi/dot-white.png" height="6" width="53" alt="">
+                                <p>Đầu tư thông minh với Top 30 <br>doanh nghiệp đại diện nền <br>kinh tế Việt Nam</p>
                             </div>
                         </div>
-                        <div class="investment-portfolio-box-child">
-                            <div class="investment-portfolio-box-img">
-                                <img src="imgs/vntop/danh-muc-dau-tu.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="page-no-home">
+            <div class="page-vntop vntop-20">
+                <div class="container">
+                    <div class="page-vntop__register">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="page-vntop__register-box-text">
+                                    <div class="page-vntop__register-title">
+                                        <h3>VNTop 20</h3>
+                                        <div class="dots_three">
+                                            <span></span>
+                                            <span></span>
+                                            <span></span>
+                                        </div>
+                                        <p>VNTop 20 là phương án đầu tư tập trung vào chiến lược đầu tư cổ phiếu vốn hóa lớn. Mục tiêu của VNTop 20 là tìm kiếm tăng trưởng từ nhóm các công ty đại diện trong bộ chỉ số VN30, do TKSIC chọn lọc theo những tiêu chí kỹ thuật gắt gao. Song song đó, chúng tôi theo sát hiệu suất cổ phiếu và tiến hành tái phân bổ vốn vào nhóm cổ phiếu được chọn lựa dựa vào thứ hạng điểm dòng tiền định kỳ mỗi tuần.</p>
+                                    </div>
+                                    <div class="page-vntop__register-list">
+                                        <div class="page-vntop__register-item">
+                                            <img src="imgs/vntop/vn-top-10-loi-nhuan-ky-vong.png" alt="">
+                                            <p>30%/năm</p>
+                                        </div>
+                                        <div class="page-vntop__register-item">
+                                            <img src="imgs/vntop/vn-top-10-thoi-gian-nam-giu-hieu-qua.png" alt="">
+                                            <p>Từ 1 tháng trở lên</p>
+                                        </div>
+                                        <div class="page-vntop__register-item">
+                                            <img src="imgs/vntop/vn-top-10-von-toi-thieu.png" alt="">
+                                            <p>10.000.000 VNĐ</p>
+                                        </div>
+                                    </div>
+                                    <p  class="page-vntop__register-p">*Lợi nhuận trên khoản đầu tư không được cam kết</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="page-vntop__register-box">
+                                    <div class="page-vntop__register-box-title">
+                                        <h4>ĐĂNG KÝ</h4>
+                                        <p>Hãy để lại thông tin của bạn, chúng tôi sẽ nhanh chóng liên hệ lại để tư vấn sâu hơn về các cơ hội đầu tư hấp dẫn cùng TKSIC</p>
+                                    </div>
+                                    <div class="page-vntop__register-box-form">
+                                        <div class="form-gr">
+                                            <label>Họ và tên</label>
+                                            <input class="form-ctr" type="text">
+                                        </div>
+                                        <div class="form-gr">
+                                            <label>Số điện thoại</label>
+                                            <input class="form-ctr" type="text">
+                                        </div>
+                                        <div class="form-gr">
+                                            <label>Email</label>
+                                            <input class="form-ctr" type="text">
+                                        </div>
+                                        <div class="form-gr">
+                                            <label>Lời nhắn</label>
+                                            <textarea class="form-ctr"></textarea>
+                                        </div>
+                                        <div class="form-gr">
+                                            <button class="btn-sbm">Đăng ký</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="page-vntop__fixed-interest">
+                        <div class="page-vntop__fixed-interest__title">
+                            <p>SỨC hÚt đẾn tỪ sẢN phẨm</p>
+                            <h3>VNTOP 20</h3>
+                            <div class="dots_three">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </div>
+                        </div>
+                        <div class="page-vntop__fixed-interest__list">
+                            <div class="page-vntop__fixed-interest__item">
+                                <div class="page-vntop__fixed-interest__item-rounded">
+                                    <h4>Vốn khởi điểm hấp dẫn</h4>
+                                </div>
+                                <p>Từ mức vốn tối thiểu 10 triệu đồng, bạn có thể dễ dàng sở hữu danh mục đầu tư đa dạng với những cổ phiếu hàng đầu Việt Nam.</p>
+                            </div>
+                            <div class="page-vntop__fixed-interest__item">
+                                <div class="page-vntop__fixed-interest__item-rounded">
+                                    <h4>Thanh khoản cao</h4>
+                                </div>
+                                <p>Khách hàng có thể dễ dàng mua, bán, chuyển nhượng hoặc quyết định đầu tư thêm bất kỳ lúc nào mà không giới hạn giá trị đầu tư.</p>
+                            </div>
+                            <div class="page-vntop__fixed-interest__item">
+                                <div class="page-vntop__fixed-interest__item-rounded">
+                                    <h4>Lợi nhuận kỳ vọng hấp dẫn</h4>
+                                </div>
+                                <p>Giá trị đầu tư kỳ vọng gia tăng theo từng quý với lợi nhuận kỳ vọng 30%/năm.</p>
+                            </div>
+                        </div>
+                        <div class="page-vntop__fixed-interest__icon">
+                            <img src="imgs/vntop/vn-top-20-icon.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="page-vntop__note">
+                    <div class="container">
+                        <div class="page-vntop__note-parent">
+                            <div class="page-vntop__note-child">
+                                <div class="page-vntop__note-title">
+                                    <h3>Lưu ý quan trọng</h3>
+                                    <img src="imgs/bao-chi/dot-white.png" height="6" width="53" alt="">
+                                    <ul>
+                                        <li>Nhà đầu tư cần đọc kỹ Nguyên tắc đầu tư, Chính sách bảo mật thông tin, Điều khoản sử dụng website, Tuyên bố miễn trách nhiệm của TKSIC trước khi tham gia mua sản phẩm và nên chú ý tới các khoản phí trước khi giao dịch.</li>
+                                        <li>Lợi nhuận trên khoản đầu tư không được cam kết. Giá trị tài sản ròng (NAV) của VNTop 20 sẽ biến động tùy thuộc vào kết quả hoạt động và giá trị tài sản đầu tư của quỹ.</li>
+                                        <li>TKSIC duy trì báo cáo hiệu suất đầu tư sản phẩm của khách hàng ngay trên website và ứng dụng TKSIC.</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="page-vntop__note-child">
+                                <div class="page-vntop__note-img">
+                                    <img src="imgs/vntop/luu-y-quan-trong.png" alt="">
+                                </div>
                             </div>
                         </div>
                     </div>
