--- a/ve-chung-toi.html
+++ b/ve-chung-toi.html
@@ -282,7 +282,7 @@
                     <div class="partner-slider" data-aos="zoom-in">
                         <div class="owl-carousel owl-carousel_capital owl-theme">
                             <div class="item">
-                                <a href="#"><img src="imgs/logo-ito-group.png" alt=""></a>
+                                <a href="#"><img src="imgs/logo-ito.png" alt=""></a>
                             </div>
                             <div class="item">
                                 <a href="#"><img src="imgs/logo-sunshine-group.png" alt=""></a>
@@ -297,7 +297,7 @@
                                 <a href="#"><img src="imgs/logo-triminh.png" alt=""></a>
                             </div>
                             <div class="item">
-                                <a href="#"><img src="imgs/logo-ito-group.png" alt=""></a>
+                                <a href="#"><img src="imgs/logo-techcombank.png" alt=""></a>
                             </div>
                         </div>
                     </div>
