fix luu y quan trong

--- a/but-pha.html
+++ b/but-pha.html
@@ -249,7 +249,7 @@
                                             <span></span>
                                             <span></span>
                                         </div>
-                                        <p>Đầu tư Bứt phá là sản phẩm đầu tư ưu tiên nhu cầu tăng trưởng vốn của khách hàng. Mục tiêu của Đầu tư Bứt phá là thiết kế phương án đầu tư chuyên biệt, tùy vào khẩu vị rủi ro và kỳ vọng đầu tư khác nhau của từng khách hàng. Chúng tôi tìm kiếm lợi suất vượt trội dựa trên danh mục đầu tư mở rộng trên các thị trường cổ phiếu, trái phiếu, hàng hóa, hợp đồng phái sinh.</p>
+                                        <p>Đầu tư Bứt phá là sản phẩm đầu tư ưu tiên nhu cầu tăng trưởng vốn của khách hàng. Mục tiêu của Đầu tư Bứt phá là thiết kế phương án đầu tư chuyên biệt, tùy vào khẩu vị rủi ro và kỳ vọng đầu tư khác nhau của từng khách hàng. Chúng tôi tìm kiếm lợi suất vượt trội dựa trên danh mục đầu tư mở rộng trên các thị trường cổ phiếu, trái phiếu, hàng hóa, hợp đồng phái sinh.</p>
                                     </div>
                                     <div class="page-vntop__register-list">
                                         <div class="page-vntop__register-item">
