--- a/lai-suat-co-dinh.html
+++ b/lai-suat-co-dinh.html
@@ -248,7 +248,7 @@
                                             <span></span>
                                             <span></span>
                                         </div>
-                                        <p>"Lãi suất cố định" là sản phẩm duy nhất được TKSIC cam kết lợi nhuận với lợi suất vượt trội so tvới lãi suất tiền gửi ngân hàng. Trên cơ sở đầu tư vào các công cụ có thu nhập cố định, TKSIC hướng đến việc tối ưu lợi nhuận cho nhà đầu tư dựa trên năng lực thu hút nguồn vốn lớn của mình.</p>
+                                        <p>"Lãi suất cố định" là sản phẩm duy nhất được TKSIC cam kết lợi nhuận với lợi suất vượt trội so tvới lãi suất tiền gửi ngân hàng. Trên cơ sở đầu tư vào các công cụ có thu nhập cố định, TKSIC hướng đến việc tối ưu lợi nhuận cho nhà đầu tư dựa trên năng lực thu hút nguồn vốn lớn của mình.</p>
                                     </div>
                                     <div class="page-vntop__register-list">
                                         <div class="page-vntop__register-item">
