--- a/vn-top-20.html
+++ b/vn-top-20.html
@@ -249,7 +249,7 @@
                                             <span></span>
                                             <span></span>
                                         </div>
-                                        <p>VNTop 20 là phương án đầu tư tập trung vào chiến lược đầu tư cổ phiếu vốn hóa lớn. Mục tiêu của VNTop 20 là tìm kiếm tăng trưởng từ nhóm các công ty đại diện trong bộ chỉ số VN30, do TKSIC chọn lọc theo những tiêu chí kỹ thuật gắt gao. Song song đó, chúng tôi theo sát hiệu suất cổ phiếu và tiến hành tái phân bổ vốn vào nhóm cổ phiếu được chọn lựa dựa vào thứ hạng điểm dòng tiền định kỳ mỗi tuần.</p>
+                                        <p>VNTop 20 là phương án đầu tư tập trung vào chiến lược đầu tư cổ phiếu vốn hóa lớn. Mục tiêu của VNTop 20 là tìm kiếm tăng trưởng từ nhóm các công ty đại diện trong bộ chỉ số VN30, do TKSIC chọn lọc theo những tiêu chí kỹ thuật gắt gao. Song song đó, chúng tôi theo sát hiệu suất cổ phiếu và tiến hành tái phân bổ vốn vào nhóm cổ phiếu được chọn lựa dựa vào thứ hạng điểm dòng tiền định kỳ mỗi tuần.</p>
                                     </div>
                                     <div class="page-vntop__register-list">
                                         <div class="page-vntop__register-item">
