--- a/vn-top-10.html
+++ b/vn-top-10.html
@@ -249,7 +249,7 @@
                                             <span></span>
                                             <span></span>
                                         </div>
-                                        <p>VNTop 10 là phương án đầu tư tập trung vào chiến lược đầu tư giá trị. Mục tiêu của VNTop 10 là tìm kiếm tăng trưởng từ nhóm các công ty giá trị nhất thị trường chứng khoán Việt Nam, do TKSIC chọn lọc theo những tiêu chí kỹ thuật gắt gao. Song song đó, chúng tôi theo sát hiệu suất cổ phiếu và tiến hành tái phân bổ vốn vào nhóm cổ phiếu được chọn lựa dựa vào thứ hạng điểm dòng tiền định kỳ mỗi tuần.</p>
+                                        <p>VNTop 10 là phương án đầu tư tập trung vào chiến lược đầu tư giá trị. Mục tiêu của VNTop 10 là tìm kiếm tăng trưởng từ nhóm các công ty giá trị nhất thị trường chứng khoán Việt Nam, do TKSIC chọn lọc theo những tiêu chí kỹ thuật gắt gao. Song song đó, chúng tôi theo sát hiệu suất cổ phiếu và tiến hành tái phân bổ vốn vào nhóm cổ phiếu được chọn lựa dựa vào thứ hạng điểm dòng tiền định kỳ mỗi tuần.</p>
                                     </div>
                                     <div class="page-vntop__register-list">
                                         <div class="page-vntop__register-item">
